<resources>
    <string name="app_name">Waterpolo</string>
    <string name="button_test">Next screen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_players_home_fault_fragment">PlayersHomeFaultFragment</string>

    <!-- Button names -->
    <string name="button_home">Timout Home</string>
    <string name="button_away">TimeOut Away</string>
    <string name="button_goal">Goal</string>
    <string name="button_change">Change</string>
    <string name="button_U20">U 20</string>
    <string name="button_UMV">UMV</string>
    <string name="button_UMV4">UMV 4</string>
    <string name="button_Injury">Injury</string>
    <string name="button_shotclock">Shotclock</string>
    <string name="button_undoAction">Undo</string>
    <string name="button_revertToAction">End match</string>
    <string name="button_signMatch">Sign</string>
    <string name="button_begin">Begin</string>
    <string name="button_cancel">Cancel Match</string>

    <!-- Button tooltips -->
    <string name="t_button_goal">Goal was scored.</string>
    <string name="t_button_change">Exchange players</string>
    <string name="t_button_penalty">Penalty</string>
    <string name="t_button_U20">U 20</string>
    <string name="t_button_UMV">UMV</string>
    <string name="t_button_UMV4">UMV 4</string>
    <string name="button_filter">filter</string>

    <!-- Text -->
    <string name="text_shotlock">30</string>
    <string name="playerFragmentTitle">TEAM</string>
    <string name="injury">Injury</string>
    <string name="field">Active</string>
    <string name="bench">Not Active</string>
    <string name="referee_email_hint">Referee email</string>
    <string name="referee_code_hint">Referee code</string>
    <string name="filter">Filter on Division</string>
    <string name="text_resetShotlock">reset</string>
    <string name="period_time">Period Time</string>
    <string name="manage_players">Manage Players</string>

</resources>
