<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    tools:context="com.g1020.waterpolo.AdministrationEnd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_weight="2.2"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ll_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:gravity="center"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/homeContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:padding="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"></FrameLayout>
                <!--            android:background="@drawable/playerlist_hometeam" -->
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="3">

                    <FrameLayout
                        android:id="@+id/teamsheadercontainer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2.4" />

                    <LinearLayout
                        android:id="@+id/activitiesTabContainer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_weight="0.6"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TabHost
                            android:id="@+id/tab_host"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TabWidget
                                    android:id="@android:id/tabs"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content" />

                                <FrameLayout
                                    android:id="@android:id/tabcontent"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content">

                                    <ListView
                                        android:id="@+id/activitiesContainerFirstRound"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:longClickable="true" />

                                    <ListView
                                        android:id="@+id/activitiesContainerSecondRound"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:longClickable="true" />

                                    <ListView
                                        android:id="@+id/activitiesContainerThirdRound"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:longClickable="true" />

                                    <ListView
                                        android:id="@+id/activitiesContainerFourthRound"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:longClickable="true" />
                                </FrameLayout>
                            </LinearLayout>
                        </TabHost>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/awayContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:padding="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />
            </LinearLayout>
            <!--                     android:background="@drawable/playerlist_awayteam" -->
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@color/colorBlack"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/adminbuttonsContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/linearLayout10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="4"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/adminbuttonsContainer">

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/referee_email_hint"
                            >

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/txtInputLayName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textSize="16sp"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/referee_code_hint">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/txtInputLayCode"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:inputType="textPassword"
                                />
                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/btnSign"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="2"
                    android:background="@drawable/button_other"
                    android:gravity="center"
                    android:clickable="true"
                    android:onClick="signMatch"
                    android:focusable="true">

                    <TextView
                        android:id="@+id/iconSignMatch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:text="@string/fa_icon_check"
                        android:textColor="@color/colorBlack"
                        android:textAlignment="center"
                        android:textSize="35sp" />

                    <TextView
                        android:id="@+id/txtBtnSignMatch"
                        style="@style/player_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/iconSignMatch"
                        android:layout_marginTop="4dp"
                        android:text="@string/button_signMatch"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textAlignment="center" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>